vm_args.c: search symbol proc in super classes

* vm_args.c (refine_sym_proc_call): traverse ancestors to search
  inherited methods for symbol proc.
  [ruby-dev:50741] [Bug #15489]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@66658 b2dd03c8-39d4-4d8f-98ff-823fe69b080e